# TowerIQ

./: .gitignore  DASHBOARD_REFACTORING_DETAILED_PLAN.md  EMULATOR_SERVICE_IMPROVEMENTS_SUMMARY.md  EMULATOR_SERVICE_REFACTORING.md  EMULATOR_WARNINGS_FIX_SUMMARY.md  HEARTBEAT_INTEGRATION.md  LOGGING_SIMPLIFICATION_RECOMMENDATIONS.md  PROFILING_README.md  README.md  README_CONVERGENCE_ANALYZER.md  README_FAST_SIMULATOR.md  README_NEW_GUI.md  _agent.js  allmodules.js  allmodules_c.js  convergence_analyzer.py  cursor_test_report.md  debug_frida_provision.py  debug_logging.py  debug_module_widget.py  demo_modern_simulator.py  demo_realistic_pulls.py  enhanced_fast_simulator.py  extract_module_data.py  fast_simulator.py  fridalog.txt  investigator.py  jest.config.js  metric_names.txt  migration_guide.md  module_lookup_table.py  module_simulation_flamegraph.html  output.txt  package-lock.json  package.json  performance_comparison_test.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  (+32 more)
backend/: api_server.py
build_configs/: .buildignore
config/: database_schema.py  hook_contract.yaml  main_config.yaml
data/: tower_iq.db  toweriq.db  toweriq.db-shm  toweriq.db-wal
docs/: BUILD.md  BUILD_FIXES.md  GRAFANA_INTEGRATION.md  README.md  SECURE_DOWNLOAD_IMPLEMENTATION.md  SLEEP_REMOVAL_IMPLEMENTATION.md  TEST_REPORTING.md  codebase_audit.md  dashboard_data_flow_analysis.md  dashboard_data_refactor_plan.md  dashboard_refactor_summary.md  database.md  database_structure_analysis.md  db_metadata_script.sql  dependency_workflow.md  frida.md  linting_report.md  package_management_analysis.md  package_structure_migration.md  project_structure.md  prospector_setup.md  pyright_analysis.md  refactoring_complete.md  refactoring_complete_guide.md  refactoring_diagram.md  refactoring_integration_guide.md  refactoring_progress.md  refactoring_proposal.md  startup_analysis.md  style_guidelines.md
frontend/: tsconfig.json
memory/: PART2_IMPLEMENTATION_SUMMARY.md  emulator_work.md  fridaservice.md  hooking.md  part1.md  part2.md  part3.md  part4.md  part5.md  part6.md
resources/: public_key.pem
scripts/: analyze_build.py  capture_baseline.py  cleanup_root.py  fix_linting.py  lint.bat  lint.py  lint.sh  make-cursor-ndjson.mjs  make-cursor-report.mjs  migrate_dashboards_to_v2.py  pre_migrate_dashboards.py  start_backend.py  test-prep.js  test_backend_build.py  test_v2_api.py
src/: __init__.py
test_frida_scripts/: allmodules.js  data.js  data_c.js  export_modules.js  export_modules_c.js  modules.js  random.js  random_c.js  reroll_c.js  test.js  tower_hook.js  tower_hook_compiled.js  tracer.js
tests/: conftest.py  test_activate_hook.py  test_app_metadata.py  test_connection_flow_controller.py  test_connection_flow_orchestration.py  test_connection_stage_manager.py  test_connection_state_models.py  test_database_service.py  test_enhanced_device_info.py  test_enhanced_device_table.py  test_enhanced_process_table.py  test_frida_service_lifecycle.py  test_hook_script_manager.py  test_performance_optimizations.py  (+5 more)
(+350 files in other folders)
