[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tower-iq"
version = "1.0.0"
description = "TowerIQ - Advanced mobile game analysis and monitoring platform"
authors = ["TowerIQ Team"]
readme = "README.md"
packages = [{include = "tower_iq", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
structlog = "^23.2"
colorama = "*"
pyyaml = "^6.0"
python-dotenv = "^1.0"
pandas = "^2.2"
numpy = "^1.26"
seaborn = "^0.13"
aiohttp = "^3.9"
pycryptodome = "^3.20"
pyinstaller = "^6.3"
sqlcipher3-wheels = "^0.5.4"
frida = "15.2.2"
frida-tools = ">=11.0.0,<12.0.0"
sqlmodel = "^0.0.16"
pyqt6 = "6.9.1"
requests = "^2.32.5"
uvicorn = "^0.37.0"
fastapi = "^0.118.0"
device-detector = "^5.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
black = "^23.7"
isort = "^5.12"
ipykernel = "^6.29.5"
# Code quality and linting tools
prospector = "^1.10.3"
pylint = "^3.2.3"
pyflakes = "^3.1.0"
pycodestyle = "^2.11.1"
pydocstyle = "^6.3.0"
mccabe = "^0.7.0"
bandit = "^1.7.10"
dodgy = "^0.2.1"
mypy = "^1.13.0"
flake8 = ">=6.0.0,<7.0.0"
pytest-cov = "^7.0.0"
pytest-timeout = "2.3.1"

[tool.poetry.scripts]
tower-iq = "tower_iq.main_app_entry:main"
